--- a/.editorconfig
+++ b/.editorconfig
@@ -20,7 +20,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 # Indentation
-indent_style = space
+indent_style = tab
 indent_size = 2
 
 ### Markdown
